# pay

./: .gitignore  .npmrc  AXEL.md  CONTRIBUTING.md  Dockerfile  Justfile  Makefile  README.md  SPEC.md  SPEC1.1.md  SPEC1.2.md  justfile  message-signing-spec.md  package.json  pay-0.1.0-1.rockspec  pnpm-workspace.yaml  splits-demo.yaml  subs-demo.yaml
.github/workflows/: ci.yml  docker.yml  npm-publish.yml  pull-requests.yml  release-cli.yml  report.yml
32/425be58bb9/: metadata.json
aggregators/: algovoi.md
c6/986f0bfa64/: metadata.json
core/: .gitignore  README.md  eslint.config.mjs  package-lock.json  package.json  tsconfig.json  tsup.config.ts
core/example/: index.ts
core/src/: client.ts  constants.ts  createQR.ts  createTransfer.ts  encodeURL.ts  fetchTransaction.ts  findReference.ts  index.ts  parseURL.ts  plugin.ts  types.ts  validateTransfer.ts  (+1 more)
corev2/: jest.config.cjs  package.json  pnpm-lock.yaml  tsconfig.json
docs/: docusaurus.config.js  gaps-pingora.md  p2p-discovery.md  paid-path-plan.md  serve-inference.md
npm/: install.js  package.json  platform.js  run.js
pdb/: README.md  package.json  pnpm-lock.yaml  vercel.json  vite.config.ts
rust/: Cargo.toml  Dockerfile  Justfile  doppler.yaml  playground-api.yaml  xtream-gate.yaml
rust/.cargo/: config.toml
rust/config/polkit/: sh.pay.unlock-keypair.policy
rust/crates/cli/: Cargo.toml
rust/crates/cli/src/: debugger_proxy.rs  main.rs  no_dna.rs  observability.rs  output.rs  system.rs  tui.rs
rust/crates/cli/src/commands/: agent_args.rs  claude.rs  codex.rs  curl.rs  destroy.rs  docs.rs  export.rs  fetch.rs  goose.rs  http.rs  httpie.rs  mod.rs  payer_proxy.rs  send.rs  setup.rs  sign.rs  solana.rs  topup.rs  wget.rs  whoami.rs
rust/crates/cli/src/commands/account/: default.rs  destroy.rs  export.rs  import.rs  list.rs  mod.rs  new.rs
rust/crates/cli/src/commands/bazaar/: endpoints.rs  install.rs  list.rs  mod.rs  remove.rs  search.rs  update.rs
rust/crates/cli/src/commands/catalog/: build.rs  check.rs  probe.rs  scaffold.rs  verdict.rs
rust/crates/cli/src/commands/claude/: agentic-gateway.md  mod.rs  payer.rs  translate.rs
rust/crates/cli/src/commands/inference/: mod.rs  registry.rs
rust/crates/cli/src/commands/policy/: create.rs  delete.rs  list.rs  mod.rs  pause.rs  resume.rs  status.rs  update.rs  use_cmd.rs
rust/crates/cli/src/commands/qodercli/: mod.rs
rust/crates/cli/src/commands/server/: demo.rs  local_registration.rs  mod.rs  payment-debugger.yml  payments.rs  plans.rs  provider_registration.rs  start.rs
rust/crates/cli/src/commands/server/inference/: discovery.rs  mod.rs  pricing.rs  providers.yml  spec.rs
rust/crates/cli/src/commands/server/inference/providers/: catalog.rs  custom.rs  exo.rs  llama_cpp.rs  lm_studio.rs  mod.rs  ollama.rs  remote_gateway.rs  vllm.rs
rust/crates/cli/src/commands/skills/: boxed.rs  build.rs  endpoints.rs  install.rs  list.rs  mod.rs  probe.rs  provider.rs  prune.rs  remove.rs  search.rs  show.rs  update.rs  validate.rs
rust/crates/cli/src/commands/subscriptions/: cancel.rs  list.rs  mod.rs  new.rs  refresh.rs  status.rs
rust/crates/cli/src/components/: account.rs  ascii_table.rs  banner.rs  help.rs  link.rs  log_format.rs  mod.rs  notice.rs  terminal.rs
rust/crates/cli/src/tui/: claude.rs  inference.rs  mod.rs  provider_picker.rs  session.rs  term.rs  theme.rs  topup.rs  widgets.rs
rust/crates/core/: Cargo.toml
rust/crates/core/examples/: balance_test.rs
rust/crates/core/src/: accounts.rs  balance.rs  config.rs  dev.rs  error.rs  explorer.rs  fetch.rs  instructions.md  keystore.rs  lib.rs  mpp.rs  runner.rs  signer.rs  user_agent.rs  x402.rs
rust/crates/core/src/bazaar/: config.rs  mod.rs
rust/crates/core/src/client/: authenticate.rs  balance.rs  dev.rs  fetch.rs  mod.rs  mpp.rs  prompt.rs  receipt.rs  runner.rs  sandbox.rs  send.rs  session.rs  sign.rs  subscription.rs  x402.rs
rust/crates/core/src/policy/: check.rs  config.rs  mod.rs  state.rs  store.rs
rust/crates/core/src/server/: accounting.rs  authenticate.rs  gate.rs  metering.rs  mod.rs  openapi.rs  otel.rs  payment.rs  proxy.rs  session.rs  session_metering.rs  session_stream.rs  subscription.rs  telemetry.rs
rust/crates/core/src/server/profiles/: inference.rs  iptv.rs  mod.rs
rust/crates/core/src/skills/: build.rs  config.rs  github.rs  local.rs  mod.rs  openapi.rs  overlay.rs  pin.rs  probe.rs
rust/crates/core/tests/: accounts_tests.rs  config_tests.rs  openapi_resolve_smoke.rs  server_tests.rs  session_surfpool_sdk_tests.rs  surfpool_tests.rs  wrong_network_tests.rs
rust/crates/core/tests/fixtures/: test-provider.yml
rust/crates/integration/: Cargo.toml
rust/crates/integration/tests/: external_http_clients.rs  subscription_e2e.rs
rust/crates/keystore/: Cargo.toml  build.rs  security_report.md
rust/crates/keystore/src/: auth.rs  lib.rs  store.rs
rust/crates/keystore/src/backends/: apple_keychain.rs  gnome_keyring.rs  mod.rs  onepassword.rs  windows_hello.rs
rust/crates/keystore/src/linux/: mod.rs
rust/crates/keystore/src/macos/: helper.swift  keychain.rs  mod.rs  touchid.rs
rust/crates/keystore/src/windows/: mod.rs
rust/crates/mcp/: Cargo.toml
rust/crates/mcp/src/: auth.rs  lib.rs  server.rs
rust/crates/mcp/src/tools/: create_skill.rs  curl.rs  get_balance.rs  get_catalog_entry.rs  get_skill_endpoints.rs  list_catalog.rs  list_skills.rs  mod.rs  search_catalog.rs  search_skills.rs  sign_transaction.rs  topup.rs
rust/crates/mcp/tests/: elicitation_e2e.rs
rust/crates/pdb/: Cargo.toml  build.rs
rust/crates/pdb/src/: correlation.rs  handlers.rs  lib.rs  logging.rs  types.rs
rust/crates/proxy/: Cargo.toml
rust/crates/proxy/src/: http402.rs  lib.rs  observer.rs
rust/crates/types/: Cargo.toml
rust/crates/types/src/: lib.rs  metering.rs  registry.rs  splits.rs
rust/crates/types/src/metering/profiles/: inference.rs  iptv.rs  mod.rs
rust/example/: README.md  server.ts
scripts/: check-native-release-artifacts.mjs
typescript/: pnpm-lock.yaml
web-ui/: README.md  index.html  package.json  pnpm-lock.yaml
(+145 files in other folders)
