[workspace]
members = ["crates/*"]
default-members = ["crates/cli"]
resolver = "2"

[workspace.package]
edition = "2024"
version = "0.21.0"
license = "MIT"

[workspace.dependencies]
# Internal crates
pay-core = { path = "crates/core" }
pay-types = { path = "crates/types" }
pay-keystore = { path = "crates/keystore" }
pay-mcp = { path = "crates/mcp" }
pay-pdb = { path = "crates/pdb" }

# CLI
clap = { version = "4", features = ["derive", "wrap_help"] }
glob = "0.3"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yml = "0.0.12"
base64 = "0.22"
crc32fast = "1.5"
flate2 = "1.1"
percent-encoding = "2"

# Error handling
thiserror = "2"

# Colors
owo-colors = "4"

# Interactive prompts
dialoguer = "0.12"

# Time
chrono = "0.4"

# MCP
rmcp = { version = "0.9", features = ["server", "transport-io", "elicitation", "schemars"] }
schemars = "0.8"

# TUI
ratatui = { version = "0.29", features = [
    "crossterm",
], default-features = false }
crossterm = { version = "0.28", default-features = false }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-opentelemetry = "0.32"
opentelemetry = "0.31"
opentelemetry-otlp = { version = "0.31", default-features = false, features = [
    "http-proto",
    "metrics",
    "reqwest-blocking-client",
    "trace",
] }
opentelemetry-semantic-conventions = "0.31"
opentelemetry_sdk = "0.31"

# Configuration
figment = { version = "0.10", features = ["toml", "env"] }
toml = "0.8"
toml_edit = "0.22"

# Temp files
tempfile = "3"

# Path expansion
shellexpand = "3"

# Open URLs in the user's browser (pay topup → MoonPay)
webbrowser = "1"

# Web framework (for payment middleware)
axum = "0.8"

# Async (for solana-mpp charge builder)
tokio = { version = "1", features = ["rt-multi-thread"] }

# HTTP client (for built-in fetch)
reqwest = { version = "0.12", features = [
    "blocking",
    "rustls-tls",
    "stream",
], default-features = false }

# Crypto (already in dep tree via solana crates)
zeroize = "1"
ed25519-dalek = { version = "2", default-features = false }
rand = "0.8"
uuid = { version = "1", features = ["v4"] }
bs58 = "0.5"
blake3 = "1"
qrcode = { version = "0.14", default-features = false }
mime_guess = { version = "2.0", default-features = false, features = ["rev-mappings"] }

# Solana payment SDK umbrella — one dep that re-exports MPP (`pay_kit::mpp`),
# x402 (`pay_kit::x402`), and the cross-protocol, balance-aware selection API
# (`pay_kit::select_payment`), replacing the granular solana-mpp/solana-x402
# deps. The `axum` feature (kit's own gate) is intentionally OFF — pay has its
# own gate (pay-core + pay-proxy).
#
# Pinned to the latest reviewed pay-kit main commit for reproducible CI builds.
pay-kit = { package = "solana-pay-kit", git = "https://github.com/solana-foundation/pay-kit", rev = "b8b2fd467ec363dd715a0523cf95e679a7169a69", default-features = false, features = [
    "mpp",
    "x402",
    "client",
    "server",
    "confidential",
    "otel",
    "testkit",
] }

# Solana primitives (pinned to versions used by solana-mpp)
bincode = "1"
solana-commitment-config = "3.1"
solana-hash = "3.1"
solana-instruction = "3.2"
solana-message = "3.1"
solana-pubkey = "3.0"
solana-signature = "3.2"
solana-system-interface = "2.0"
solana-transaction = "3.1"

# litesvm (solana-address pin loosened) so litesvm 0.13 — pulled by surfpool-sdk
# 1.4 — can coexist with the confidential proof crates (zk-sdk 7). The fix is
# merged upstream (now `solana-address = ">=2.2, <3"`) but not yet in a crates.io
# release (0.13.0 still pins `=2.2.0`), so pin a specific upstream rev for
# reproducibility (a moving `branch = "master"` is not reproducible across builds).
# TODO(remove): drop this patch once a litesvm > 0.13.0 carrying the loosened
# `solana-address = ">=2.2, <3"` constraint lands on crates.io.
[patch.crates-io]
litesvm = { git = "https://github.com/LiteSVM/litesvm.git", rev = "b097465bc66ba6033b5118b8a2d5bc2ecb9f00e1" }
litesvm-token = { git = "https://github.com/LiteSVM/litesvm.git", rev = "b097465bc66ba6033b5118b8a2d5bc2ecb9f00e1" }
