[package]
name = "pay-core"
edition.workspace = true
version.workspace = true
license.workspace = true

[features]
default = []
# Payment middleware for axum-based servers (metering, accounting, 402 flow).
server = ["dep:axum", "dep:http"]
# Distributed-tracing context propagation: extract W3C traceparent from incoming
# requests and parent the server spans to it. Lets a client (e.g. pay-bench) and
# this proxy share one end-to-end trace. Off by default to keep the lib lean.
otel = ["dep:opentelemetry", "dep:tracing-opentelemetry"]
# Gate network-dependent integration tests (e.g. OpenAPI smoke tests).
network_tests = []
# Build OpenSSL from source for cross-compilation (no system libssl-dev needed).
# Activates openssl-sys/vendored which is pulled in transitively by
# solana-rpc-client → reqwest → native-tls → openssl-sys.
vendored-openssl = ["openssl-sys/vendored"]
# Durable MPP session state backed by Redis. Runtime selection still requires
# PAY_SESSION_REDIS_URL; without it the in-memory store remains the default.
redis-session-store = ["pay-kit/redis-store"]

[dependencies]
axum = { workspace = true, optional = true }
# Framework-neutral HTTP types for the payment gate core (axum/pingora/reqwest
# all build on these). Already in the tree transitively.
http = { version = "1", optional = true }
bytes = "1"
async-stream = "0.3"
futures-util = "0.3"
openssl-sys = { version = "0.9", optional = true }
pay-types = { workspace = true }
schemars = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yml = { workspace = true }
base64 = { workspace = true }
chrono = { workspace = true }
percent-encoding = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
opentelemetry = { workspace = true, optional = true }
tracing-opentelemetry = { workspace = true, optional = true }
figment = { workspace = true }
toml = { workspace = true }
tempfile = { workspace = true }
shellexpand = { workspace = true }
tokio = { workspace = true, features = ["time", "sync"] }
hmac = "0.12"
md-5 = "0.10"
mime_guess = { workspace = true }
sha1 = "0.10"
sha2 = "0.10"
ed25519-dalek = { workspace = true }
rand = { workspace = true }
uuid = { workspace = true }
bs58 = { workspace = true }
blake3 = { workspace = true }
reqwest = { workspace = true }
pay-keystore = { workspace = true }
pay-kit = { workspace = true }
bincode = { workspace = true }
solana-commitment-config = { workspace = true }
solana-hash = { workspace = true }
solana-instruction = { workspace = true }
solana-message = { workspace = true }
solana-pubkey = { workspace = true }
solana-signature = { workspace = true }
solana-system-interface = { workspace = true }
solana-transaction = { workspace = true }
# Force five8_core 0.1.2's `std` feature ON. It gates `impl Error for
# DecodeError`, which solana-keypair/solana-signature rely on; feature
# unification otherwise drops it on re-resolve, breaking the build with
# "DecodeError: std::error::Error is not satisfied". Pinned to the transitive
# version already in the tree.
# TODO(remove): drop this pin once five8_core enables `std` by default, or once
# solana-keypair/solana-signature no longer depend on the feature-unified `std`
# gate (re-check on the next solana-* bump).
five8_core = { version = "=0.1.2", features = ["std"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
serde_yml = { workspace = true }
toml = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true, features = ["full"] }
surfpool-sdk = { git = "https://github.com/solana-foundation/surfpool", rev = "b46c47e06c28ed1aa31e119215b479b70e72d4c3" }
serde_json = { workspace = true }
tower = "0.5"
serial_test = "3"
solana-client = "3.1"

[[test]]
name = "metering_tests"
required-features = ["server"]

[[test]]
name = "server_tests"
required-features = ["server"]

[[test]]
name = "surfpool_tests"
required-features = ["server"]
