[package]
name = "pay-integration"
edition.workspace = true
version.workspace = true
license.workspace = true
publish = false

[dev-dependencies]
pay-core = { workspace = true, features = ["server"] }
pay-types = { workspace = true }
serde_json = { workspace = true }
pay-kit = { workspace = true }
base64 = { workspace = true }
tempfile = { workspace = true }
