[package]
name = "pay-keystore"
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
shellexpand = { workspace = true }
thiserror = { workspace = true }
zeroize = { workspace = true }

[target.'cfg(target_os = "linux")'.dependencies]
secret-service = { version = "3", features = ["rt-tokio-crypto-rust"] }
tokio = { version = "1", features = ["rt"] }
zbus = { version = "3", default-features = false, features = ["tokio"] }

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Security_Credentials",
    "Win32_System_Com",
    "Security_Credentials_UI",
] }
