[package]
name = "pay-keystore"
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
bs58 = { workspace = true }
ed25519-dalek = { workspace = true }
rust_decimal = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
shellexpand = { workspace = true }
thiserror = { workspace = true }
zeroize = { workspace = true }

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.10"
security-framework-sys = "2"
objc2 = "0.6"
objc2-foundation = { version = "0.3", features = ["NSError", "NSString"] }
objc2-local-authentication = "0.3"
block2 = "0.6"

[target.'cfg(target_os = "linux")'.dependencies]
procfs = { version = "0.17", default-features = false }
secret-service = { version = "3", features = ["rt-tokio-crypto-rust"] }
tokio = { version = "1", features = ["rt"] }
zbus = { version = "3", default-features = false, features = ["tokio"] }

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = [
    "Foundation",
    "Win32_Security_Credentials",
    "Win32_System_Com",
    "Win32_System_Console",
    "Win32_UI_WindowsAndMessaging",
    "Security_Credentials_UI",
] }
windows-core = "0.58"
