[package]
name = "pay-pdb"
description = "Embedded Payment Debugger UI + backend for pay server"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
async-stream = "0.3"
axum = { workspace = true }
base64 = { workspace = true }
bincode = { workspace = true }
chrono = { workspace = true }
include_dir = "0.7.4"
mime_guess = { version = "2.0.4", default-features = false }
serde = { workspace = true }
serde_json = { workspace = true }
solana-transaction = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
solana-hash = { workspace = true }
solana-instruction = { workspace = true }
solana-message = { workspace = true }
solana-pubkey = { workspace = true }
solana-signature = { workspace = true }

[build-dependencies]
