[package]
name = "pay-types"
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
schemars = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
# Single source of truth for stablecoin mint addresses — pay-types re-exports
# pay-kit's core registry rather than maintaining its own copy.
solana-pay-core = { workspace = true }

[dev-dependencies]
serde_yml = { workspace = true }
