[package]
name = "pay-types"
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
schemars = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
# Single source of truth for stablecoin mint addresses — pay-types re-exports
# pay-kit's core registry rather than maintaining its own copy. (pay-kit
# consolidated into one crate; the registry now lives at `pay_kit::core::mints`.)
pay-kit = { workspace = true }

[dev-dependencies]
serde_yml = { workspace = true }
